YH-614: fix input gap and input width

--- a/src/entities/socialNetwork/ui/SocialNetWorkInputs/SocialNetWorkInputs.module.css
+++ b/src/entities/socialNetwork/ui/SocialNetWorkInputs/SocialNetWorkInputs.module.css
@@ -1,4 +1,6 @@
 .input {
+  display: flex;
+  width: auto;
   min-height: 48px;
 }
 
