--- a/src/features/profile/changePassword/ui/ChangePassword.module.css
+++ b/src/features/profile/changePassword/ui/ChangePassword.module.css
@@ -23,13 +23,12 @@
 
 .flex-form{
   flex-wrap: wrap;
-  gap: 17px;
+  gap: 20px 16px;
 }
   
 .input-wrapper,
 .submit-button 
   {
-  margin-bottom: 25px;
   width: 100%;
   max-width: 328px;
 }
@@ -92,4 +91,10 @@
   border-color: var(--border-focus-purple);
   caret-color: var(--caret-color-red);
   background-color: var(--background-block);
+}
+
+@media (width <= 768px) {
+  .flex-form{
+    gap: 16px;
+  }
 }
